rust/src/tui/render/snapshots/agent_bar__tui__render__detail__tests__detail_renders_provider_windows_and_models.snap
---
source: src/tui/render/detail.rs
assertion_line: 366
expression: terminal.backend()
---
"┏ agent-bar ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Dashboard ┃ Waybar ┃ History ┃ Login                         ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┏PROVIDERS━━━━┓┏ Claude · Max 5x ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃◆ Claude  26%┃┃ 5h  █████░░░░░░░░░░░░░   26%  → 23:00         ┃"
"┃             ┃┃ wk  ██░░░░░░░░░░░░░░░░   12%  → 00:00         ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃ Models                                        ┃"
"┃             ┃┃   Opus      █████░░░░░░░   41%                ┃"
"┃             ┃┃   Sonnet    ██░░░░░░░░░░   20%                ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃ tokens/h ▁▂▃▅▇▆▄▂▁          -                 ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┃             ┃┃                                               ┃"
"┗━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" ↑↓ provider · Esc volta · ←→ aba · [r]efresh · [?] ajuda       "
